# AdventOfCode

./: .ghci  .gitignore  AdventOfCode.cabal  LICENSE  package.yaml
2020/: AdventOfCode.cabal  package.yaml
2020/app/: Main.hs
2020/src/: AdventOfCode.hs
2020/src/AdventOfCode/: Day02.hs  Day03.hs  Day06.hs  Day09.hs  Day10.hs  Day12.hs  Day18.hs  Day19.hs  Day20.hs  Day25.hs  Prelude.hs
2021/: day01.rkt  day02.rkt  day03.rkt  day04.rkt  day06.rkt  day10.rkt  day11.rkt  day12.rkt  day13.rkt  day14.rkt  day15.rkt  day16.rkt  day17.rkt  day18.rkt  day19-parser.rkt  day19.rkt  day20.rkt  day21.rkt  day22.rkt  day23.rkt  day24.rkt  day25.rkt  day3.py  day5.rkt  day6.rkt  day7.rkt  day8.rkt  day9.rkt
2022/: .gitignore  Cargo.toml
2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  main.rs
2023/: .gitignore  AoC2023.cabal  cabal.project  readme.md
2023/app/: Main.hs
2023/bench/: Main.hs
2023/src/AdventOfCode/: BucketQueue.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Grid.hs  Interval.hs  Main.hs  PQueue.hs  Parser.hs  Position.hs  Prelude.hs  Search.hs
2024/: AoC2024.cabal  LICENSE  cabal.project  readme.md
2024/bench/: Main.hs
2024/src/AdventOfCode/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Grid.hs  Interval.hs  Main.hs  Position.hs  Prelude.hs  Vec2.hs
2025/: AoC2025.cabal  cabal.project
2025/app/: Main.hs
2025/src/AdventOfCode/: BucketQueue.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Graph.hs  Grid.hs  Main.hs  Parser.hs  Prelude.hs  Search.hs
src/: AdventOfCode.hs
src/AdventOfCode/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day07.hs  Day08.hs  Day09.hs  Day11.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Prelude.hs
src/Data/: Matrix.hs
