cabal-version:      3.4
name:               AoC2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ambros Lins
maintainer:         ambros.lins@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.1.0
    hs-source-dirs:   src
    default-language: GHC2021

executable AoC2023
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.1.0,
        AoC2023

    hs-source-dirs:   app
    default-language: GHC2021
