cabal-version:   3.4
name:            AoC2023
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Ambros Lins
maintainer:      ambros.lins@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

common extensions
  default-language:   GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
    NamedFieldPuns

common dependencies
  build-depends:
    , attoparsec
    , base                  ^>=4.18.1.0
    , bytestring
    , containers
    , deepseq
    , hashable
    , http-client
    , http-client-tls
    , http-types
    , parallel
    , parser-combinators
    , text
    , time
    , unordered-containers
    , vector

library
  import:          warnings, extensions, dependencies
  exposed-modules:
    AdventOfCode.Day01
    AdventOfCode.Day02
    AdventOfCode.Day03
    AdventOfCode.Day04
    AdventOfCode.Day05
    AdventOfCode.Day06
    AdventOfCode.Day07
    AdventOfCode.Day08
    AdventOfCode.Day09
    AdventOfCode.Day10
    AdventOfCode.Day11
    AdventOfCode.Day12
    AdventOfCode.Interval
    AdventOfCode.Grid
    AdventOfCode.Main
    AdventOfCode.Prelude
    AdventOfCode.Parser

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:  src

executable AoC2023
  import:         warnings, extensions, dependencies
  main-is:        Main.hs
  ghc-options:
    -threaded

  -- other-modules:
  -- other-extensions:
  build-depends:  AoC2023
  hs-source-dirs: app

benchmark AoC2023-bench
  import:         warnings, extensions, dependencies
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  ghc-options:
    -threaded

  -- other-modules:
  -- other-extensions:
  build-depends:  AoC2023, tasty-bench
  hs-source-dirs: bench
